# RNUdb

./: .dockerignore  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DATA_MODEL.md  Dockerfile  LICENSE  PLAN.md  README.md  api.py  compose.yaml  dev.py  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.node.json  vite.config.ts  vitest.config.ts
.agents/skills/: alembic.md  auth.md  database.md  documentation.md  frontend-ui.md  new-api.md  security.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md
.github/workflows/: build.yml  ci.yml
alembic/: env.py
alembic/versions/: 045f796c6091_add_applied_at_to_pending_changes.py  221538ef3882_add_inheritance_column_to_variant_.py  22820da06f25_add_gnomad_af_and_aou_af_columns.py  361dcc08bce4_remove_cadd_score_column.py  (+7 more)
api/: config.py  main.py  models.py
docs/: AUTH_ISSUE.md  DEPLOYMENT.md  DEVELOPMENT.md  FOR_CURATORS.md  schema.md
rnudb_utils/: __init__.py  database.py  external_apis.py  vcf_parser.py
scripts/: README.md  convert_to_import_format.py  convert_variants_to_new_format.py  create_clinical_variants_vcf.py  flip-structure.js  init.py  insert_clinical_variants.py  insert_gene_and_structure.py  insert_sample_data.py
src/: App.css  App.tsx  index.css
test-results/: .last-run.json
tests/: conftest.py  test_api.py  test_approvals.py  test_auth_config.py  test_imports.py  test_validation.py
(+182 files in other folders)
