[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "orjson>=3.11.3",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
