[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "requests>=2.31.0",
    "pandas>=3.0.2",
    "orjson>=3.11.9",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.27",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "alembic>=1.13.0",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "alembic>=1.13.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "S", "UP"]
ignore = ["S101", "B008", "N815", "S608"]
